--- a/index.html
+++ b/index.html
@@ -245,17 +245,14 @@
           <div class="filter">
             <ul id="filters">
               <li><a href="#" data-filter="*" class="current">ALL</a></li>
-              <li><a href="#" data-filter=".apps">Apps</a></li>
-              <li><a href="#" data-filter=".me">Me</a></li>
-              <li><a href="#" data-filter=".websites">Websites</a></li>
-            </ul>
+               </ul>
           </div>
 
           <div class="itemsContainer">
             <ul class="items">
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img1.jpg" />
 
                   <div class="icons">
                     <a
@@ -275,10 +272,9 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img9.jpg" />
 
                   <div class="icons">
                     <a
@@ -298,10 +294,9 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
               <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img8.jpg" />
 
                   <div class="icons">
                     <a
@@ -321,13 +316,75 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
-              <li
-                onclick=""
-                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
-              >
+              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img7.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="items">
+                  <img src="img/img6.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="items">
+                  <img src="img/img5.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="items">
+                  <img src="img/img4.jpg" />
 
                   <div class="icons">
                     <a
@@ -350,7 +407,30 @@
 
               <li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img2.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="items">
+                  <img src="img/img10.jpg" />
 
                   <div class="icons">
                     <a
@@ -376,7 +456,7 @@
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
               >
                 <div class="items">
-                  <img src="" />
+                  <img src="img/img11.jpg" />
 
                   <div class="icons">
                     <a
@@ -396,6 +476,330 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
+
+              <li onclick="" class="Websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="items">
+                  <img src="img/img12.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li
+                onclick=""
+                class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
+              >
+                <div class="items">
+                  <img src="img/img13.jpg" />
+
+                  <div class="icons">
+                    <a
+                      href=""
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="digital Nomad"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <li
+              onclick=""
+              class="me col-xs-6 col-sm-4 col-md-3 col-lg-3"
+            >
+              <div class="items">
+                <img src="img/img14.jpg" />
+
+                <div class="icons">
+                  <a
+                    href=""
+                    title="View image"
+                    class="openButton"
+                    data-fancybox
+                    data-caption="digital Nomad"
+                  >
+                    <i class="fa fa-search"></i>
+                  </a>
+
+                  <a href="" target="_blank" class="projectLink">
+                    <i class="fa fa-link"></i>
+                  </a>
+                </div>
+                <div class="imageOverlay"></div>
+              </div>
+            </li>
+            <li
+            onclick=""
+            class="me col-xs-6 col-sm-4 col-md-3 col-lg-3"
+          >
+            <div class="items">
+              <img src="img/img15.jpg" />
+
+              <div class="icons">
+                <a
+                  href=""
+                  title="View image"
+                  class="openButton"
+                  data-fancybox
+                  data-caption="digital Nomad"
+                >
+                  <i class="fa fa-search"></i>
+                </a>
+
+                <a href="" target="_blank" class="projectLink">
+                  <i class="fa fa-link"></i>
+                </a>
+              </div>
+              <div class="imageOverlay"></div>
+            </div>
+          </li>
+          <li
+          onclick=""
+          class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
+        >
+          <div class="items">
+            <img src="img/img16.jpg" />
+
+            <div class="icons">
+              <a
+                href=""
+                title="View image"
+                class="openButton"
+                data-fancybox
+                data-caption="digital Nomad"
+              >
+                <i class="fa fa-search"></i>
+              </a>
+
+              <a href="" target="_blank" class="projectLink">
+                <i class="fa fa-link"></i>
+              </a>
+            </div>
+            <div class="imageOverlay"></div>
+          </div>
+        </li>
+        <li
+        onclick=""
+        class="me col-xs-6 col-sm-4 col-md-3 col-lg-3"
+      >
+        <div class="items">
+          <img src="img/img17.jpg" />
+
+          <div class="icons">
+            <a
+              href=""
+              title="View image"
+              class="openButton"
+              data-fancybox
+              data-caption="digital Nomad"
+            >
+              <i class="fa fa-search"></i>
+            </a>
+
+            <a href="" target="_blank" class="projectLink">
+              <i class="fa fa-link"></i>
+            </a>
+          </div>
+          <div class="imageOverlay"></div>
+        </div>
+      </li>
+      <li
+      onclick=""
+      class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
+    >
+      <div class="items">
+        <img src="img/img18.jpg" />
+
+        <div class="icons">
+          <a
+            href=""
+            title="View image"
+            class="openButton"
+            data-fancybox
+            data-caption="digital Nomad"
+          >
+            <i class="fa fa-search"></i>
+          </a>
+
+          <a href="" target="_blank" class="projectLink">
+            <i class="fa fa-link"></i>
+          </a>
+        </div>
+        <div class="imageOverlay"></div>
+      </div>
+    </li>
+    <li
+    onclick=""
+    class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+  >
+    <div class="items">
+      <img src="img/img19.jpg" />
+
+      <div class="icons">
+        <a
+          href=""
+          title="View image"
+          class="openButton"
+          data-fancybox
+          data-caption="digital Nomad"
+        >
+          <i class="fa fa-search"></i>
+        </a>
+
+        <a href="" target="_blank" class="projectLink">
+          <i class="fa fa-link"></i>
+        </a>
+      </div>
+      <div class="imageOverlay"></div>
+    </div>
+  </li>
+  <li
+  onclick=""
+  class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+>
+  <div class="items">
+    <img src="img/img20.jpg" />
+
+    <div class="icons">
+      <a
+        href=""
+        title="View image"
+        class="openButton"
+        data-fancybox
+        data-caption="digital Nomad"
+      >
+        <i class="fa fa-search"></i>
+      </a>
+
+      <a href="" target="_blank" class="projectLink">
+        <i class="fa fa-link"></i>
+      </a>
+    </div>
+    <div class="imageOverlay"></div>
+  </div>
+</li>
+<li
+onclick=""
+class="me col-xs-6 col-sm-4 col-md-3 col-lg-3"
+>
+<div class="items">
+  <img src="img/img21.jpg" />
+
+  <div class="icons">
+    <a
+      href=""
+      title="View image"
+      class="openButton"
+      data-fancybox
+      data-caption="digital Nomad"
+    >
+      <i class="fa fa-search"></i>
+    </a>
+
+    <a href="" target="_blank" class="projectLink">
+      <i class="fa fa-link"></i>
+    </a>
+  </div>
+  <div class="imageOverlay"></div>
+</div>
+</li>
+<li
+onclick=""
+class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
+>
+<div class="items">
+  <img src="img/img21.JPG" />
+
+  <div class="icons">
+    <a
+      href=""
+      title="View image"
+      class="openButton"
+      data-fancybox
+      data-caption="digital Nomad"
+    >
+      <i class="fa fa-search"></i>
+    </a>
+
+    <a href="" target="_blank" class="projectLink">
+      <i class="fa fa-link"></i>
+    </a>
+  </div>
+  <div class="imageOverlay"></div>
+</div>
+</li>
+<li
+onclick=""
+class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+>
+<div class="items">
+  <img src="img/img22.jpg" />
+
+  <div class="icons">
+    <a
+      href=""
+      title="View image"
+      class="openButton"
+      data-fancybox
+      data-caption="digital Nomad"
+    >
+      <i class="fa fa-search"></i>
+    </a>
+
+    <a href="" target="_blank" class="projectLink">
+      <i class="fa fa-link"></i>
+    </a>
+  </div>
+  <div class="imageOverlay"></div>
+</div>
+</li>
+<li
+onclick=""
+class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3"
+>
+<div class="items">
+  <img src="img/img23.jpg" />
+
+  <div class="icons">
+    <a
+      href=""
+      title="View image"
+      class="openButton"
+      data-fancybox
+      data-caption="digital Nomad"
+    >
+      <i class="fa fa-search"></i>
+    </a>
+
+    <a href="" target="_blank" class="projectLink">
+      <i class="fa fa-link"></i>
+    </a>
+  </div>
+  <div class="imageOverlay"></div>
+</div>
+</li>
             </ul>
           </div>
         </div>
